Added more information about myself.

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <h1>Where I'm From</h1>
       <p>Minnesota.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Mowing, Boating and Soccer.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Full Stack Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Henderson</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>There are puzzles to solve and I need the right tools.</p>
     </section>
 
     <footer id="footer">
